fix config.json and complete dockerfile

--- a/config.json
+++ b/config.json
@@ -1,14 +1,10 @@
 {
   "rpc_nodes": [
-    "https://api.steemit.com",
-    "https://rpc.buildteam.io",
-    "https://steemd.minnowsupportproject.org",
-    "https://steemd.privex.io",
-    "https://gtg.steem.house:8090"
+    "https://api.steemit.com"
   ],
   "account": "your_witness_account_name",
   "active_key": "your_witness_account_private_active_key",
-  "exchanges": ["bittrex", "poloniex", "binance"],
+  "exchanges": ["poloniex", "binance"],
   "interval": 60,
   "peg_multi": 1
 }
