--- a/config.json
+++ b/config.json
@@ -14,7 +14,8 @@
   ],
   "feed_steem_account": "",
   "feed_steem_active_key": "",
-  "exchanges": ["poloniex", "binance", "cloudflare", "bittrex", "coingecko", "cryptocompare"],
+  "coinmarketcap_api_key": "",
+  "exchanges": ["coingecko", "cryptocompare", "coinmarketcap"],
   "interval": 60,
   "feed_publish_interval": 30,
   "feed_publish_fail_retry": 5,
